--- a/templates/GeneralSingleElement.html
+++ b/templates/GeneralSingleElement.html
@@ -1,33 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='extra.css') }}">
-</head>
-<body>
-    <div class = "title">
-        <h2 class="beautiful">VACANCY</h2>
-    </div>
-    <div class = "positioning">
-    <div class="whiteBlock upper">
-        <h1 class="beautiful"> {{ title }} </h1>
-    </div>
+{% extends 'template.html' %}
+{% block head_title %}
+    {{ title }}
+{% endblock %}
+{% block title %}
+    {{ title }}
+{% endblock %}
+{% block content %}
 
-
-        {% for comp,link_text,link in content() %}
-            <p class="general-beautiful"> {% for item in comp%}
-                {{ item }}&nbsp;
-                {% endfor %}
-                {% if link %}
-             <a href ="/{{link}}"> {{ link_text }}</a></p>
-                {% endif %}
-        {% endfor %}
-
-    {% if need_back %}
-        <p class="beautiful"><a href="../">back</a></p>
+    <p class="beautiful"> {% for x in vac_info[:3]%}
+        {{x}}&nbsp;
+    {% endfor %}</p>
+    {% if vac_info[3]%}
+    <p class="beautiful">Description: {{vac_info[3]}}</p>
     {% endif %}
-    </div>
-</body>
-</html>
+    <p class="beautiful">Requirements:</p>
+    <ul class="general-beautiful">
+        {% for x in requirements %}
+        <li> {{ x[0] }}   {{ x[1] }} </li>
+        {% endfor %}
+    </ul>
+    <p class="beautiful"><a href="newreq"> add requirement</a><br></p>
+    <p class="beautiful"><a href="edit">edit vacancy</a><br></p>
+    <p class="beautiful"><a href='remove'>remove vacancy</a><br></p>
+    <p class="beautiful"><a href="../">home</a></p>
+{% endblock %}
