--- a/templates/GeneralSingleElement.html
+++ b/templates/GeneralSingleElement.html
@@ -6,21 +6,47 @@
     {{ title }}
 {% endblock %}
 {% block content %}
-
-    <p class="beautiful"> {% for x in vac_info[:3]%}
-        {{x}}&nbsp;
-    {% endfor %}</p>
-    {% if vac_info[3]%}
-    <p class="beautiful">Description: {{vac_info[3]}}</p>
-    {% endif %}
-    <p class="beautiful">Requirements:</p>
-    <ul class="general-beautiful">
-        {% for x in requirements %}
-        <li> {{ x[0] }}   {{ x[1] }} </li>
-        {% endfor %}
-    </ul>
-    <p class="beautiful"><a href="newreq"> add requirement</a><br></p>
-    <p class="beautiful"><a href="edit">edit vacancy</a><br></p>
-    <p class="beautiful"><a href='remove'>remove vacancy</a><br></p>
-    <p class="beautiful"><a href="../">home</a></p>
+    {% for element in content %}
+        {% if element['type'] == 'line' %}
+            <p class="beautiful">
+            {% for point in element['data'] %}
+                {% if point['link'] %}
+                    <a href="{{ point['link'] }}">{{ point['text'] }}</a>
+                {% else %}
+                 {{ point['text'] }}
+                {% endif %}
+            {% endfor %}
+            </p>
+        {% elif element['type'] == 'list' %}
+            <ul>
+                {% for line in element['data'] %}
+                    <li class="general-beautiful">
+                    {% for point in line %}
+                        {% if point['link'] %}
+                            <a href="{{ point['link'] }}">{{ point['text'] }}</a>
+                        {% else %}
+                        {{ point['text'] }}
+                        {% endif %}
+                    {% endfor %}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+    {% endfor %}
+{#    <p class="beautiful"> {% for x in vac_info[:3]%}#}
+{#        {{x}}&nbsp;#}
+{#    {% endfor %}</p>#}
+{#    {% if vac_info[3]%}#}
+{#    <p class="beautiful">Description: {{vac_info[3]}}</p>#}
+{#    {% endif %}#}
+{#    <p class="beautiful">Requirements:</p>#}
+{#    <ul class="general-beautiful">#}
+{#        {% for x in requirements %}#}
+{#        <li> {{ x[0] }}   {{ x[1] }} </li>#}
+{#        {% endfor %}#}
+{#    </ul>#}
+{#    <p class="beautiful"><a href="newreq"> add requirement</a><br></p>#}
+{#    <p class="beautiful"><a href="edit">edit vacancy</a><br></p>#}
+{#    <p class="beautiful"><a href='remove'>remove vacancy</a><br></p>#}
+{#    <p class="beautiful"><a href="../">home</a></p>#}
 {% endblock %}
